--- a/package.json
+++ b/package.json
@@ -8,26 +8,30 @@
     "start": "gulp"
   },
   "devDependencies": {
-    "autoprefixer": "9.0.0",
-    "browser-sync": "2.27.4",
-    "cssnano": "5.0.6",
-    "del": "6.0.0",
-    "gulp": "4.0.2",
-    "gulp-concat": "2.6.1",
-    "gulp-htmlmin": "5.0.1",
-    "gulp-imagemin": "7.1.0",
-    "gulp-notify": "4.0.0",
-    "gulp-plumber": "1.2.1",
-    "gulp-postcss": "9.0.0",
-    "gulp-rename": "2.0.0",
-    "gulp-sass": "5.0.0",
-    "gulp-sourcemaps": "3.0.0",
-    "gulp-svgstore": "8.0.0",
-    "gulp-uglify": "3.0.2",
-    "gulp-webp": "4.0.1",
-    "gulp-webp-html": "1.0.2",
-    "postcss": "8.3.5",
-    "sass": "1.35.2"
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.8",
+    "autoprefixer": "^9.0.0",
+    "browser-sync": "^2.27.4",
+    "cssnano": "^5.0.6",
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-postcss": "^9.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-svgstore": "^8.0.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-webp": "^4.0.1",
+    "gulp-webp-html": "^1.0.2",
+    "postcss": "^8.3.5",
+    "rollup-stream": "^1.24.1",
+    "sass": "^1.35.2",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {}
 }
