--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flicker-template",
+  "name": "starter-template",
   "private": true,
   "description": "Стартовый шаблон для вёрстки",
   "scripts": {
