--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "description": "Стартовый шаблон для вёрстки",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint": "eslint --fix src/scripts/**/*.js",
+    "test": "npm run eslint",
     "build": "gulp build",
     "start": "gulp"
   },
@@ -14,6 +15,9 @@
     "browser-sync": "^2.27.4",
     "cssnano": "^5.0.6",
     "del": "^6.0.0",
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
